=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 3.03 - IN DEVELOPMENT

=over

=item *

Made 'Revert' button for the edit screens of Stories, Media, and Templates 
write to disk (after error-checking), added text clarifying what the new
version number means, updated related tests and docs. [Noam Weinstein]

=item *

Added krang_deploy_templates script to deploy some or all templates
from the command-line. [Noam Weinstein]

=item *

Added option to krang_backup to backup a single instance. [Noam Weinstein]

=item *

Caring for singular/plural in string "Result(s)" on find
screens. [Bodo Schulze]

=item *

Make and remove symlinks (for now only calendar and help files) when
(un-)installing language distributions. Remove localized templates
when uninstalling a language dist. Also passed Krang::Localization
through perltidy. [Bodo Schulze]

=item * 

Added 'force-checkin' option to krang_upload_templates and krang_upload_media.
(In the past objects checked out to other users were skipped). [Noam Weinstein]

=item *

Added 'View Log' to Media View (r4815) and Template View (r4820)
screens. [Bodo Schulze]

=item *

For Media Edit screen, ripped out 'Publish to Preview' button
including its JavaScript function and Perl runmode, since each Save
and Save & Stay now does publish to preview anyway (behavior
introduced by Noam in r4513). [Bodo Schulze]

=item *

Replaced C<src/Digest-MD5-2.23.tar.gz> with
C<src/Digest-MD5-2.36_patched_for_UTF8.tar.gz> which handles UTF-8
data transparently. [Bodo Schulze]

=item *

Made sure each Krang template points to its own help files.  Also
streamlined help file names to ease the making of more sophisticated
help systems. [Bodo Schulze]

=item *

Added C<t/dict/words.ascii> (to generate filenames and the like) and
C<t/dict/words.latin1>, a mixture of English, French, German, Italian,
Portuguese and Spanish words for content generation.  Also made all