@@ -39,8 +39,8 @@ Krang.onload( function() {
   <tmpl_if row_count>
     <div class="panel">
       <form>
-        <input value="<tmpl_lang Steal>" onclick="steal_selected()" type="button">      
-        <input value="<tmpl_lang Check In>" onclick="checkin_selected()" type="button">
+        <input value="<tmpl_lang Steal>" onclick="steal_selected()" type="button" class="list-btn">      
+        <input value="<tmpl_lang Check In>" onclick="checkin_selected()" type="button" class="list-btn">
       </form>
     </div>
   </tmpl_if>
@@ -54,8 +54,8 @@ Krang.onload( function() {
   <tmpl_if row_count>
     <div class="panel capped">
       <form>
-        <input value="<tmpl_lang Steal>" onclick="steal_selected()" type="button">      
-        <input value="<tmpl_lang Check In>" onclick="checkin_selected()" type="button">
+        <input value="<tmpl_lang Steal>" onclick="steal_selected()" type="button" class="list-btn">      
+        <input value="<tmpl_lang Check In>" onclick="checkin_selected()" type="button" class="list-btn">
       </form>
     </div>
   </tmpl_if>
